--- a/getHelpNow.html
+++ b/getHelpNow.html
@@ -33,15 +33,15 @@
   <table id="table">
   	<tr>
   	  <td>
-  	    <button class="button"  onclick = "location.href='/PCSA-webapp/contact.php';" id="bt-cnt-PCMO" name="bt-cnt-PCMO">Contact PCMO</button>
+  	    <button class="button"  onclick = "location.href='/PCSA-webapp/contact.html';" id="bt-cnt-PCMO" name="bt-cnt-PCMO">Contact PCMO</button>
   	  </td>
   	  <td>
-  	    <button class="button"  onclick = "location.href='/PCSA-webapp/contact.php';" id="bt-cnt-PCMO" id="bt-cnt-SSM" name="bt-cnt-SSM">Contact SSM</button>
+  	    <button class="button"  onclick = "location.href='/PCSA-webapp/contact.html';" id="bt-cnt-PCMO" id="bt-cnt-SSM" name="bt-cnt-SSM">Contact SSM</button>
   	  </td>
   	</tr>
   	<tr align="center" id="tr-2">
   	  <td>
-  	    <button class="button"  onclick = "location.href='/PCSA-webapp/contact.php';" id="bt-cnt-SARL" name="bt-cnt-SARL">Contact SARL</button>
+  	    <button class="button"  onclick = "location.href='/PCSA-webapp/contact.html';" id="bt-cnt-SARL" name="bt-cnt-SARL">Contact SARL</button>
   	  </td>
       <td>
         <a href="getHelpNow2.html"><img src="images/fw-arrow.png" style="height: 50px; width: 50px;"></a>
