circle of trust added

--- a/PCSaves.html
+++ b/PCSaves.html
@@ -25,7 +25,7 @@
   </div>
 
   <div> 
-    <button class="small-button" id="bt-cntPC" name="bt-cntPC" onclick="openPCSaves()">Contact Now</button>
+    <button class="small-button" id="bt-cntPC" name="bt-cntPC" onclick="openPopup()">Contact Now</button>
   </div>
 
   <div class="block">
@@ -46,7 +46,7 @@
   </div>
 </div>     
 </center>
-<script type="text/javascript" src="javascripts/PCSavespopup.js"></script>
+<script type="text/javascript" src="javascripts/popup.js"></script>
 <script type="text/javascript" src="javascripts/twilio-sms.js"></script>
 <script type="text/javascript" src="javascripts/twilio-call.js"></script>
 </body>
