--- a/officeOfCivilRightsAndDiversity.html
+++ b/officeOfCivilRightsAndDiversity.html
@@ -25,7 +25,7 @@
     </div>
   <div> 
     
-  <button class="small-button" id="bt-cntnw" name="bt-cntnw" onclick="openOfficeCRD()">Contact Now</button>
+  <button class="small-button" id="bt-cntnw" name="bt-cntnw" onclick="openPopup()">Contact Now</button>
   </div>
 
   <div class="block">
@@ -46,7 +46,7 @@
   </div>
 </div><!--closing div for window-->
 </center>
-<script type="text/javascript" src="javascripts/OfficeCRDpopup.js"></script>
+<script type="text/javascript" src="javascripts/popup.js"></script>
 <script type="text/javascript" src="javascripts/twilio-sms.js"></script>
 </body>
 </html>
