--- a/officeOfVictimAdvocacy.html
+++ b/officeOfVictimAdvocacy.html
@@ -25,7 +25,7 @@
   </div>
 
   <div> 
-    <button class="small-button" id="bt-cntnw" name="bt-cntnw" onclick="openOfficeVA()">Contact Now</button>
+    <button class="small-button" id="bt-cntnw" name="bt-cntnw" onclick="openPopup()">Contact Now</button>
   </div>
 
   <div class="block">
@@ -47,7 +47,7 @@
 
 </div>     
 </center>
-<script type="text/javascript" src="javascripts/OfficeVApopup.js"></script>
+<script type="text/javascript" src="javascripts/popup.js"></script>
 <script type="text/javascript" src="javascripts/twilio-sms.js"></script>
 <script type="text/javascript" src="javascripts/twilio-call.js"></script>
 </body>
