--- a/getHelpNow2.html
+++ b/getHelpNow2.html
@@ -35,18 +35,18 @@
   <table id="btn-table">
     <tr>
       <td>
-         <button class="button" onclick = "location.href='/PCSA-webapp/PCSaves.html';" id="bt-PCSaves" name="bt-PCSaves">PC Saves Anonymous Helpline</button>
+         <button class="button" onclick = "location.href='PCSaves.html';" id="bt-PCSaves" name="bt-PCSaves">PC Saves Anonymous Helpline</button>
       </td>
       <td>
-        <button class="button" onclick = "location.href='/PCSA-webapp/officeOfVictimAdvocacy.html';" id="bt-offVA" name="bt-offVA">Office of Victim Advocacy</button>
+        <button class="button" onclick = "location.href='officeOfVictimAdvocacy.html';" id="bt-offVA" name="bt-offVA">Office of Victim Advocacy</button>
       </td>
     </tr>
     <tr>
       <td>
-        <button class="button" id="bt-offIG" name="bt-offIG" onclick = "location.href='/PCSA-webapp/officeOfInspectorGeneral.html';" >Office of Inspector General</button>
+        <button class="button" id="bt-offIG" name="bt-offIG" onclick = "location.href='officeOfInspectorGeneral.html';" >Office of Inspector General</button>
       </td>
       <td>
-        <button class="button" id="bt-offCRD" name="bt-offCRD" onclick = "location.href='/PCSA-webapp/officeOfCivilRightsAndDiversity.html';" >Office of Civil Rights and Diversity</button>
+        <button class="button" id="bt-offCRD" name="bt-offCRD" onclick = "location.href='officeOfCivilRightsAndDiversity.html';" >Office of Civil Rights and Diversity</button>
       </td>
     </tr>
   </table>
